--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ag-grid": "6.4.2",
     "ag-grid-enterprise": "6.4.2",
     "ag-grid-ng2": "6.4.0",
+    "angular-in-memory-web-api": "0.1.13",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
