--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ag-grid-ng2": "6.4.0",
     "angular-in-memory-web-api": "0.1.13",
     "core-js": "^2.4.1",
+    "font-awesome": "4.7.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
